# netatalk

./: Makefile.am  configure.ac  meson.build  meson_options.txt
.github/workflows/: build.yml
config/: meson.build
contrib/: meson.build
distrib/initscripts/: meson.build
doc/manpages/man1/: Makefile.am
doc/manpages/man3/: meson.build
doc/manpages/man5/: Makefile.am
doc/manpages/man8/: Makefile.am
etc/: meson.build
etc/afpd/: Makefile.am  afp_config.c  afpstats.c  afpstats_obj.c  catsearch.c  directory.c  extattrs.c  fork.c  meson.build  uam.c  volume.c
etc/cnid_dbd/: cmd_dbd.c  cmd_dbd_scanvol.c  cnid_metad.c  main.c
etc/netatalk/: afp_mdns.c  afp_zeroconf.c  netatalk.c
etc/uams/: uams_dhx2_pam.c  uams_dhx_pam.c  uams_gss.c  uams_pam.c
include/atalk/: vfs.h
libatalk/: meson.build
libatalk/acl/: ldap.c
libatalk/adouble/: ad_lock.c  ad_open.c
libatalk/bstring/: bstradd.c
libatalk/cnid/: Makefile.am  cnid.c
libatalk/cnid/last/: cnid_last.c
libatalk/cnid/mysql/: cnid_mysql.c
libatalk/cnid/sqlite/: Makefile.am  cnid_sqlite.c
libatalk/util/: fault.c  ftw.c  logger.c  netatalk_conf.c  server_lock.c  unix.c
libatalk/vfs/: ea_sys.c  extattr.c  unix.c  vfs.c
macros/: netatalk.m4
test/afpd/: meson.build  test.c
